tests/builtin_uses/builtin_uses.exp
Error: test.js:2
  2: (o.foo: string);
      ^^^^^ Cannot cast property `foo` to string because number [1] is incompatible with string [2].
  References:
    2: (o.foo: string);
        ^^^^^ [1]: number
    2: (o.foo: string);
               ^^^^^^ [2]: string

Error: test2.js:2
  2: (o.foo: string);
      ^^^^^ Cannot cast property `foo` to string because number [1] is incompatible with string [2].
  References:
    2: (o.foo: string);
        ^^^^^ [1]: number
    2: (o.foo: string);
               ^^^^^^ [2]: string


Found 2 errors
